output/GluGlu_Radion_muTau_2017/err/file_3319730.6.err
  File "/afs/cern.ch/work/v/vdamante/public/analysis/triggerStudiesAnalysis.py", line 1309
    baseline_paths_dict['2016']['eTau']['iter_1'].extend([baseline_paths_dict['2016']['eTau']['baseline'])
                                                                                                         ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
